src/patternfly/components/MenuToggle/menu-toggle.scss
/* ... */
// - Menu toggle split button action
.#{$menu-toggle}.pf-m-split-button.pf-m-action {
  --#{$menu-toggle}--m-split-button--m-action--child--BorderLeftColor: var(--#{$menu-toggle}--BorderColor);

  // all subsequent buttons
  > :not(:first-child) {
    border-inline-start: var(--#{$menu-toggle}--m-split-button--m-action--child--BorderLeftWidth) solid var(--#{$menu-toggle}--m-split-button--m-action--child--BorderLeftColor);
  }

  > :has(.#{$menu-toggle}__controls) {
    padding-inline-end: 0;
  }

  // Split button, primary
  &.pf-m-primary {
    --#{$menu-toggle}--m-split-button--m-action--child--BorderLeftColor: var(--#{$menu-toggle}--m-split-button--m-action--m-primary--child--BorderLeftColor);

    // stylelint-disable max-nesting-depth, selector-max-class, selector-not-notation
    // update to single :not() in breaking change
    > :where(:not(.pf-m-disabled):not([disabled])) {
      background-color: var(--#{$menu-toggle}--m-split-button--m-action--m-primary--child--BackgroundColor);

      &:is(:hover, :focus) {
        --#{$menu-toggle}--m-split-button--m-action--m-primary--child--BackgroundColor: var(--#{$menu-toggle}--m-split-button--m-action--m-primary--child--hover--BackgroundColor);
      }

      &:is(:active, .pf-m-active) {
        --#{$menu-toggle}--m-split-button--m-action--m-primary--child--BackgroundColor: var(--#{$menu-toggle}--m-split-button--m-action--m-primary--child--active--BackgroundColor);
      }
    }

    &.pf-m-expanded {
      --#{$menu-toggle}--m-split-button--m-action--m-primary--child--BackgroundColor: var(--#{$menu-toggle}--m-split-button--m-action--m-primary--expanded--child--BackgroundColor);
    }
    // stylelint-enable
  }

  // Split button, secondary
  &.pf-m-secondary {
    --#{$menu-toggle}--m-split-button--m-action--child--BorderLeftColor: var(--#{$menu-toggle}--m-split-button--m-action--m-secondary--child--BorderLeftColor);
  }

  // disable accent border
  &:is(.pf-m-disabled, :disabled) {
    --#{$menu-toggle}--m-split-button--m-action--child--BorderLeftColor: var(--#{$menu-toggle}--m-split-button--m-action--child--disabled--BorderLeftColor);

    &::before {
      content: none;
    }
  }

  // disabled styles for children
  > :is(.pf-m-disabled, :disabled) {
    --#{$menu-toggle}--m-split-button--m-action--child--BorderLeftColor: var(--#{$menu-toggle}--m-split-button--m-action--child--disabled--BorderLeftColor);

    color: var(--#{$menu-toggle}--m-split-button--child--disabled--Color);
    background-color: var(--#{$menu-toggle}--m-split-button--child--disabled--BackgroundColor);
  }
}

// - Menu toggle typeahead
.#{$menu-toggle}.pf-m-typeahead {
  --#{$menu-toggle}__button--AlignSelf: var(--#{$menu-toggle}--m-typeahead__button--AlignSelf);
  --#{$menu-toggle}--ColumnGap: 0;

  align-items: stretch;
  padding: 0;

  .#{$menu-toggle}__button {
    --#{$menu-toggle}__button--PaddingRight: 0;
  }

  .#{$menu-toggle}__controls {
    --#{$menu-toggle}__button--PaddingRight: 0;

    display: flex;
    align-items: stretch;
  }

  .#{$text-input-group} {
    --#{$text-input-group}__utilities--c-button--PaddingRight: var(--#{$menu-toggle}--m-typeahead--c-text-input-group__utilities--c-button--PaddingRight);
    --#{$text-input-group}__utilities--MarginRight: 0;

    flex: 1;
  }
}

// - Menu toggle button
.#{$menu-toggle}__button {
  align-self: var(--#{$menu-toggle}__button--AlignSelf);
  min-width: var(--#{$menu-toggle}__button--MinWidth);
  padding-inline-start: var(--#{$menu-toggle}__button--PaddingLeft);
  padding-inline-end: var(--#{$menu-toggle}__button--PaddingRight);
  color: inherit;
  background-color: var(--#{$menu-toggle}__button--BackgroundColor);
  border: 0;

  &:has(.#{$menu-toggle}__controls) {
    padding-inline-start: 0;
  }
}

.#{$menu-toggle}__icon {
  flex-shrink: 0;
  align-self: center;
}

.#{$menu-toggle}__text {
  @include pf-v5-text-overflow;

  min-width: 0;
}

.#{$menu-toggle}__count {
  display: flex;
  flex-wrap: nowrap;
}

.#{$menu-toggle}__controls {
  display: flex;
  align-items: center;
  justify-content: center;
  min-width: var(--#{$menu-toggle}__controls--MinWidth);
}

.#{$menu-toggle}__toggle-icon {
  color: var(--#{$menu-toggle}__toggle-icon--Color, inherit);
}

